[gd_scene load_steps=22 format=3 uid="uid://e76ggx2uf5p7"]

[ext_resource type="Script" uid="uid://clov5773vowr8" path="res://CLASE 8 SISTEMAS DE ANIMACIONES/animaciones.gd" id="1_xlngb"]
[ext_resource type="Texture2D" uid="uid://byd8nth6eekt3" path="res://CLASE 8 SISTEMAS DE ANIMACIONES/Aventurero (Animacion Ataque SPRITESHEET).png" id="2_3nmp4"]
[ext_resource type="Texture2D" uid="uid://dnkxwlchs3vg2" path="res://CLASE 8 SISTEMAS DE ANIMACIONES/ATACAR (SPRITES SEPARADOS)/Aventurero (Animacion Ataque) 1.png" id="2_ouk3x"]
[ext_resource type="Texture2D" uid="uid://b1q2bimhfut0f" path="res://CLASE 8 SISTEMAS DE ANIMACIONES/ATACAR (SPRITES SEPARADOS)/Aventurero (Animacion Ataque) 2.png" id="3_g0gi5"]
[ext_resource type="Texture2D" uid="uid://2eiu3ijj3rrd" path="res://CLASE 8 SISTEMAS DE ANIMACIONES/ATACAR (SPRITES SEPARADOS)/Aventurero (Animacion Ataque) 3.png" id="4_exs4b"]
[ext_resource type="Texture2D" uid="uid://c6trxvdhdwtx1" path="res://CLASE 8 SISTEMAS DE ANIMACIONES/ATACAR (SPRITES SEPARADOS)/Aventurero (Animacion Ataque) 4.png" id="5_vcled"]
[ext_resource type="Texture2D" uid="uid://gq7q1clkfbbe" path="res://CLASE 8 SISTEMAS DE ANIMACIONES/ATACAR (SPRITES SEPARADOS)/Aventurero (Animacion Ataque) 5.png" id="6_ndsiw"]
[ext_resource type="Texture2D" uid="uid://leipl60oo6o4" path="res://CLASE 8 SISTEMAS DE ANIMACIONES/ATACAR (SPRITES SEPARADOS)/Aventurero (Animacion Ataque) 6.png" id="7_mwcqs"]

[sub_resource type="Animation" id="Animation_hhb0p"]
resource_name = "Run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_ouk3x"), ExtResource("3_g0gi5"), ExtResource("4_exs4b"), ExtResource("5_vcled"), ExtResource("6_ndsiw"), ExtResource("7_mwcqs")]
}

[sub_resource type="Animation" id="Animation_5a5r2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ouk3x")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kjgje"]
_data = {
&"RESET": SubResource("Animation_5a5r2"),
&"Run": SubResource("Animation_hhb0p")
}

[sub_resource type="Animation" id="Animation_g0gi5"]
resource_name = "Run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(200, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5707964]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.26666668),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"demo"
}]
}

[sub_resource type="Animation" id="Animation_exs4b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vcled"]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_exs4b"]
_data = {
&"Attack": SubResource("Animation_vcled"),
&"RESET": SubResource("Animation_exs4b"),
&"Run": SubResource("Animation_g0gi5")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g0gi5"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_exs4b"]
animation = &"Run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vcled"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ndsiw"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mwcqs"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_vcled"]
states/Attack/node = SubResource("AnimationNodeAnimation_g0gi5")
states/Attack/position = Vector2(404, 242)
states/End/position = Vector2(404, 100)
states/Run/node = SubResource("AnimationNodeAnimation_exs4b")
states/Run/position = Vector2(200, 242)
transitions = ["Start", "Run", SubResource("AnimationNodeStateMachineTransition_vcled"), "Run", "Attack", SubResource("AnimationNodeStateMachineTransition_ndsiw"), "Attack", "Run", SubResource("AnimationNodeStateMachineTransition_mwcqs")]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_xlngb")

[node name="Metodo1" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_ouk3x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Metodo1"]
libraries = {
&"": SubResource("AnimationLibrary_kjgje")
}

[node name="Metodo2" type="Sprite2D" parent="."]
texture = ExtResource("2_3nmp4")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Metodo2"]
libraries = {
&"": SubResource("AnimationLibrary_exs4b")
}

[node name="AnimationTree" type="AnimationTree" parent="Metodo2"]
tree_root = SubResource("AnimationNodeStateMachine_vcled")
anim_player = NodePath("../AnimationPlayer")

[connection signal="animation_finished" from="Metodo2/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="Metodo2/AnimationPlayer" to="." method="_on_animation_player_animation_started"]
